--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -11,8 +11,8 @@ favicon: /images/favicon.ico
 agency-logo: /images/logo.png
 
 # Hero Banner
-hero-title: Hero title
-hero-subtitle: Hero subtitle
+hero-title: CXA19 title
+hero-subtitle: CXA19 subtitle
 hero-banner: /images/ITSC Image Banner 2.jpg
 
 #Call to Action Button
