--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -11,9 +11,9 @@ favicon: /images/favicon.ico
 agency-logo: /images/logo.png
 
 # Hero Banner
-hero-title: 
-hero-subtitle: 
-hero-banner: /images/ITSC Image Banner 2.jpg
+# hero-title: 
+# hero-subtitle: 
+# hero-banner: /images/ITSC Image Banner 2.jpg
 
 #Call to Action Button
 #button:
