--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -20,20 +20,20 @@ agency-logo: /images/logo.png
 # - text: Learn More
 #  url: /who-we-are/
 
-key-highlights:
-  - title: Highlight A
-    description: Important highlight A is important
-    url: https://google.com
-    external: true
-  - title: Highlight B
-    description: Important highlight B is equally important
-    url: https://yahoo.com
-    external: true
-  - title: Page A
-    description: Page A is important too
-    url: /page-A/
+# key-highlights:
+#   - title: Highlight A
+#     description: Important highlight A is important
+#     url: https://google.com
+#     external: true
+#    - title: Highlight B
+#     description: Important highlight B is equally important
+#     url: https://yahoo.com
+#     external: true
+#   - title: Page A
+#     description: Page A is important too
+#     url: /page-A/
 
-resources-title: Resources
-resources-subtitle: Be in the know
-resources-more-button: More Resources
-resources-more-button-url: news/
+# resources-title: Resources
+# resources-subtitle: Be in the know
+# resources-more-button: More Resources
+# resources-more-button-url: news/
