--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -13,7 +13,7 @@ agency-logo: /images/logo.png
 # Hero Banner
 # hero-title: 
 # hero-subtitle: 
-# hero-banner: /images/ITSC Image Banner 2.jpg
+hero-banner: /images/ITSC Image Banner 2.jpg
 
 #Call to Action Button
 # button:
