--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -49,12 +49,12 @@
     url: /standards/how-are-standards-developed/
   - title: Benefits Of Standards
     url: /standards/benefits-of-standards/
-  - title: Singapore It Standards
+  - title: Singapore IT Standards
     url: /standards/singapore-it-standards/
 - title: International Participation
   url: /international-participation/membership-in-iso-iec-jtc-1/
   sub-links:
-  - title: Membership In ISO IEC JTC 1
+  - title: Membership In ISO/IEC JTC 1
     url: /international-participation/membership-in-iso-iec-jtc-1/
   - title: Standards And World Trade
     url: /international-participation/standards-and-world-trade/
