--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,7 +30,7 @@
     url: /technical-committees/green-information-technology-technical-committee/
   - title: Health Informatics Technical Committee
     url: /technical-committees/health-informatics-technical-committee/
-  - title: Idenfication Technology Technical Committee
+  - title: Identification Technology Technical Committee
     url: /technical-committees/idenfication-technology-technical-committee/
   - title: Information Technology For Senior Adults Technical Committee
     url: /technical-committees/information-technology-for-senior-adults-technical-committee/
