--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,8 +24,8 @@
     url: /technical-committees/blockchain-and-distributed-ledger-technologies-technical-committee/
   - title: Cloud Computing Standards Technical Committee
     url: /technical-committees/cloud-computing-standards-technical-committee/
-  - title: Efinancial Service Technical Committee
-    url: /technical-committees/efinancial-service-technical-committee/
+  - title: eFinancial Services Technical Committee
+    url: /technical-committees/efinancial-services-technical-committee/
   - title: Green Information Technology Technical Committee
     url: /technical-committees/green-information-technology-technical-committee/
   - title: Health Informatics Technical Committee
